fixed tracks grid layout when on smaller screens. added a max width to main container

--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,7 @@ body {
 }
 
 .app-container {
-  margin: 0rem 14rem;
-}
-
-@media (max-width: 1200px) {
-  .app-container {
-    margin: 0 1rem;
-  }
+  max-width: 1000px;
+  padding: 10px;
+  margin: 0 auto;
 }
